fix: refine data seed class